# libfacedetectiondemo

./: CMakeLists.txt  README.md  libfacedetectiondemo.cpp
libfacedetection/lib/: facedetection.lib
libfacedetection/lib/cmake/facedetection/: facedetectionConfig-debug.cmake
